[package]
name = "base_box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
libp2p = { version = "0.50.0", features = ["kad", "tcp", "mdns", "full"] }
log = "0.4.17"
macro-utils = "0.1.3"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.92"
serde_yaml = "0.9.17"
structopt = "0.3.26"
futures = "0.3.6"
rand = "0.7.3"
async-io = "1.12.0"
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
